tests/transpiler/x/go/list_set_ops.error
exit status 1
# command-line-arguments
../../../tests/transpiler/x/go/list_set_ops.go:11:207: syntax error: unexpected keyword for at end of statement
../../../tests/transpiler/x/go/list_set_ops.go:12:140: syntax error: unexpected name res at end of statement
../../../tests/transpiler/x/go/list_set_ops.go:13:24: method has no receiver
../../../tests/transpiler/x/go/list_set_ops.go:13:31: syntax error: unexpected {, expected (
../../../tests/transpiler/x/go/list_set_ops.go:14:28: method has no receiver
../../../tests/transpiler/x/go/list_set_ops.go:14:28: syntax error: unexpected [, expected name
